# rust-lambda

./: .gitignore  README.md
bruno/RustLambda/: bruno.json  goodbye.bru  hello.bru
bruno/RustLambda/environments/: dev.bru
lambda/: Cargo.toml  Dockerfile  request.json
lambda/api/: Cargo.toml
lambda/api/src/: api.rs  lib.rs  requests.rs  websocket.rs
lambda/api_cloud_entry/: Cargo.toml
lambda/api_cloud_entry/src/: api.rs  main.rs  websocket.rs
lambda/api_local_entry/: Cargo.toml
lambda/api_local_entry/src/: main.rs
lambda/api_sqs_entry/: Cargo.toml
lambda/api_sqs_entry/src/: main.rs
lambda/domain/src/: commands.rs  default_hash_map.rs  errors.rs  lib.rs
lambda/event_publisher/: Cargo.toml
lambda/event_publisher/src/: event_publisher_cloud.rs  event_publisher_instance.rs  event_publisher_local.rs  event_publisher_trait.rs  lib.rs
lambda/game_logic/: Cargo.toml
lambda/game_logic/src/: finish_round.rs  lib.rs
lambda/lambda_entry/: Cargo.toml
lambda/lambda_entry/src/: api.rs  main.rs  websocket.rs
lambda/lambda_lib/: Cargo.toml
lambda/lambda_lib/src/: lib.rs
lambda/lambda_lib/src/api/: api.rs  requests.rs  websocket.rs
lambda/lambda_lib/src/notifier/: notifier_cloud.rs  notifier_trait.rs
lambda/lambda_lib/src/service/: create_session.rs  destroy_connection.rs  mod.rs  set_nickname.rs
lambda/lambda_lib/src/storage/: database_cloud.rs  database_local.rs  database_trait.rs  dynamodb_client_local.rs  mod.rs  session_table.rs  websocket_table.rs
lambda/local_entry/: Cargo.toml
lambda/local_entry/src/: main.rs
lambda/notifier/: Cargo.toml
lambda/notifier/src/: dependency_injection.rs  lib.rs  models.rs  models_for_game_state.rs  models_for_nickname.rs  notifier_cloud.rs  notifier_instance.rs  notifier_local.rs  notifier_trait.rs
lambda/service/: Cargo.toml
lambda/service/src/: check_session_timeout.rs  create_connection.rs  create_game.rs  create_session.rs  destroy_connection.rs  destroy_session.rs  finish_round.rs  goodbye.rs  hello.rs  leave_game.rs  lib.rs  new_round.rs  roll_dice.rs  send_game_state_notification.rs  set_nickname.rs  set_session.rs  test_setup.rs
lambda/service/tests/: test_check_session_timeout.rs  test_create_connection.rs  test_create_game.rs  test_create_session.rs  test_destroy_connection.rs  test_destroy_session.rs  test_finish_round.rs  test_leave_game.rs  test_new_round.rs  test_roll_dice.rs  test_set_nickname.rs  test_set_session.rs
lambda/src/: dependency_injection.rs  main.rs  test_setup.rs
lambda/src/api/: api.rs  auth.rs  goodbye.rs  hello.rs  mod.rs  requests.rs  websocket.rs
lambda/src/domain/: commands.rs  errors.rs  utils.rs
lambda/src/notifier/: mod.rs  notifier.rs  notifier_cloud.rs  notifier_local.rs
lambda/src/service/: create_connection.rs  create_session.rs  destroy_connection.rs  goodbye.rs  hello.rs  mod.rs  set_session.rs
lambda/storage/: Cargo.toml
scripts/: authenticate.py  connect_to_websocket.py
terraform/: .terraform.lock.hcl  api_gateway.tf  api_gateway_endpoints.tf  api_gateway_websocket.tf  api_gateway_websocket_endpoints.tf  auth.tf  containers.tf  disconnection_events.tf  dynamodb.tf  game_created_events.tf  lambda.tf  lambda_permissions.tf  main.tf  output.tf
terraform/.terraform/: terraform.tfstate
(+29 files in other folders)
