[package]
name = "api"
version = "0.1.0"
edition = "2021"

[features]
in_memory = []

[dependencies]
domain = { path = "../domain" }
notifier = { path = "../notifier" }
service = { path = "../service" }
storage = { path = "../storage" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[env]
RUSTC_BOOTSTRAP = "1"