[package]
name = "api_cloud_entry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_cloud_entry"
path = "src/main.rs"

[dependencies]
api = { path = "../api" }
domain = { path = "../domain" }

lambda_http = "0.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
in_memory = []
