[package]
name = "api_local_entry"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
domain = { path = "../domain" }

actix = "0.13.5"
actix-web = "4.0"
actix-web-actors = "4.3.1"
tokio = { version = "1", features = ["full"] }
tungstenite = "0.15"
uuid = { version = "1.0", features = ["v4"] }
