[package]
name = "api_sqs_entry"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "api_sqs_entry"
path = "src/main.rs"

[dependencies]
domain = { path = "../domain" }
service = { path = "../service" }

aws_lambda_events = "0.15.1"
lambda_runtime = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }

[features]
in_memory = []
