[package]
name = "event_publisher"
version = "0.1.0"
edition = "2021"

[features]
in_memory = []

[dependencies]
domain = { path = "../domain" }

aws-config = "1.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
trait-variant = "0.1.2"
aws-sdk-eventbridge = "1.41.0"
