[package]
name = "lambda_lib"
version = "0.1.0"
edition = "2021"

[features]
test = []

[dependencies]
aws-config = "1.5.4"
aws-sdk-apigatewaymanagement = "1.35.0"
aws-sdk-dynamodb = "1.37.0"
aws-smithy-runtime-api = "1.7.1"
once_cell = "1.19.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }

[env]
RUSTC_BOOTSTRAP = "1"