[package]
name = "service"
version = "0.1.0"
edition = "2021"

[features]
in_memory = []

[dependencies]
domain = { path = "../domain" }
notifier = { path = "../notifier" }
storage = { path = "../storage" }

serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4.38"
